[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["IrinaDovzhenok <93725678+ireallydo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "2.1.0"
elasticsearch = "^8.15.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
